Update to 0.32.1 (#10)