@@ -19,13 +19,9 @@ pushd %basedir%
 @set confpath=%cd%\..\conf\
 @set classpath=.;!confpath!;!mrlibpath!;!libpath!\*
 
-@set java9opt=--add-modules=java.xml.bind
-java -version 2>&1 | findstr /c:"build 1." > nul
-if %errorlevel% == 0 @set java9opt=
-
 rem set java env
 popd
-java -Xms64m -Xmx512m %java9opt% -classpath "!classpath!" %mainclass% %*
+java -Xms64m -Xmx512m -classpath "!classpath!" %mainclass% %*
 
 if errorlevel 1 (
   if %argC% == 0 (
